--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,32 @@
           <h2 class="nav-title">{{ site.title }}</h2>
         </a>
         <ul>
-          <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
           <li><a href="{{ site.baseurl }}/">Posts</a></li>
+          <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
+
+          {% if site.twitter_username %}
+            <li>
+              <a href="https://twitter.com/{{ site.twitter_username }}">
+                <i class="fa fa-twitter"></i> Twitter
+              </a>
+            </li>
+          {% endif %}
+
+          {% if site.github_username %}
+            <li>
+              <a href="https://github.com/{{ site.github_username }}">
+                <i class="fa fa-github"></i> GitHub
+              </a>
+            </li>
+          {% endif %}
+
+          {% if site.linkedin_username %}
+            <li>
+              <a href="https://linkedin.com/in/{{ site.linkedin_username }}">
+                <i class="fa fa-linkedin"></i> LinkedIn
+              </a>
+            </li>
+          {% endif %}
         </ul>
     </div>
   </nav>
