--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
           {% if site.twitter_username %}
             <li>
               <a href="https://twitter.com/{{ site.twitter_username }}">
-                <i class="fa fa-twitter"></i> Twitter
+                <i class="fa fa-lg fa-twitter"></i>
               </a>
             </li>
           {% endif %}
@@ -24,7 +24,7 @@
           {% if site.github_username %}
             <li>
               <a href="https://github.com/{{ site.github_username }}">
-                <i class="fa fa-github"></i> GitHub
+                <i class="fa fa-lg fa-github"></i>
               </a>
             </li>
           {% endif %}
@@ -32,7 +32,7 @@
           {% if site.linkedin_username %}
             <li>
               <a href="https://linkedin.com/in/{{ site.linkedin_username }}">
-                <i class="fa fa-linkedin"></i> LinkedIn
+                <i class="fa fa-lg fa-linkedin"></i>
               </a>
             </li>
           {% endif %}
@@ -46,7 +46,7 @@
 
     <footer>
       <span>
-        &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> {{ site.author.name }}. Made with Jekyll using the <a href="https://github.com/chesterhow/tale/">Tale</a> theme.
+        &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> {{ site.author.name }}. Made with Jekyll using a modified <a href="https://github.com/omervk/tale/">Tale</a> theme.
       </span>
     </footer>
   </body>
